--- a/notebook.ipynb
+++ b/notebook.ipynb
@@ -379,7 +379,9 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "df.to_csv(\"erick_demo.csv\")"
+   ]
   }
  ],
  "metadata": {
